--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+<!--    <div style="background-image: url('https://storage.googleapis.com/graph-web/blog/Graph-Council-and-foundation-desktop%402x.jpg');">-->
+
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
